--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -15,8 +15,8 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="changeData2"
-            android:text="改变数据2" />
+            android:onClick="unregister"
+            android:text="取消注册" />
 
         <TextView
             android:id="@+id/tv1"
